--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-streamlit>=1.35.0
-molmass>=2023.8.2
-numpy>=1.26.4
-pandas>=2.2.2
+streamlit>=1.32.0
+pandas>=2.2.0
+numpy>=1.24.0
+matplotlib>=3.7.0
+scikit-learn>=1.2.0
+streamlit-option-menu>=0.3.6
+molmass>=2022.9.1
